* Fix on_load events with requires_class not working in maps/spawn.txt
* Fix timing of Effects so that the first "tick" happens immediately.
* Fix "Press button to use" prompt no showing up for some items.
* Fix loud loot drop sound effect when there are a large number of drops at once.
* Fix incorrect HP/MP regen for high regen values and high frame limits.

Game updates:

* New graphics for HP and MP status bars
* Reworked art for the Cleave power
* Cleave power radius reduced to closer match its artwork
* Reduced the strength and radius of Rakk's freeze attack
* Fixed the Goblin Thief being able to steal potions from a Summoned Zombie
* Reduced the hitbox for spike traps
* Greatly reduced the damage for spike traps in the Underworld. In exchange, the traps now inflict bleeding.
* Overall reduced drop rates for alchemy items
* Added animations for immunity and ice-based slow status effects
* Redesigned the Family Crypt map and quest
* Redesigned the Nazia Mines maps and quest
* Redesigned the Torture Chambers map and quest (again)
* Mortar & Pestle can now be placed on the action bar
* All quest items can be stored in the player's private stash.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* Catalan (ca) update (Maria Cano)
* German (de) update (Wuzzy2)
* Spanish (es) update (Agustin Ferrario)
* Basque (eu) by aitzkora
* French (fr) update (leø, Christophe Nemo)
* Scottish Gaelic (gd) update (GunChleoc)
* Hungarian (hu) update (litoll)
* Korean (ko) by Kor_OfenTHource (team members: bnk159hair, kangdonghun1230, HunSeongPark and paparad0x)
* Norwegian (nb) update (Elias Nykrem)
* Polish (pl) update (Błażej Pęksyk, Grzegorz Szymaszek)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Igor Polyakov)
* Slovak (sk) update (MiroslavR)
* Ukranian (uk) update (Sergiy Borodych)
* Vietnamese (vi) update (Nguyễn Gia Phong)
* Chinese (zh) update (dumaosen, sakura09123)



Flare v1.11 (http://flarerpg.org/index.php/2019/07/27/flare-1-11/)
