@@ -87,6 +87,7 @@ Engine fixes:
 * Fix "Press button to use" prompt no showing up for some items.
 * Fix loud loot drop sound effect when there are a large number of drops at once.
 * Fix incorrect HP/MP regen for high regen values and high frame limits.
+* Fix camera, parallax layer, and cutscene speeds when using alternative frame limits.
 
 Game updates:
 
